--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.yonghanJu.capturecomposable'
 }
 
 dependencies {
@@ -60,4 +61,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    // Compose
+    implementation "androidx.compose.runtime:runtime:1.4.3"
+    implementation "androidx.compose.ui:ui-graphics:1.4.3"
 }
