--- a/capture/build.gradle
+++ b/capture/build.gradle
@@ -28,6 +28,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose = true
+    }
+    composeOptions {
+        kotlinCompilerVersion = '1.2.0'
+        kotlinCompilerExtensionVersion '1.2.0'
+    }
 }
 
 dependencies {
@@ -46,6 +53,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     // Compose
-    implementation "androidx.compose.runtime:runtime:1.4.3"
-    implementation "androidx.compose.ui:ui-graphics:1.4.3"
+    implementation "androidx.compose.runtime:runtime:1.2.0"
+    implementation "androidx.compose.ui:ui-graphics:1.2.0"
 }
