--- a/capture/build.gradle
+++ b/capture/build.gradle
@@ -56,3 +56,5 @@ dependencies {
     implementation "androidx.compose.runtime:runtime:1.2.0"
     implementation "androidx.compose.ui:ui-graphics:1.2.0"
 }
+
+group = "com.github.yonghanJu"
