--- a/capture/build.gradle
+++ b/capture/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -57,4 +58,24 @@ dependencies {
     implementation "androidx.compose.ui:ui-graphics:1.2.0"
 }
 
-group = "com.github.yonghanJu"
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.yonghanJu'
+                artifactId = 'capturecomposable'
+                version = '1.0.0'
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                from components.debug
+
+                groupId = 'com.github.yonghanJu'
+                artifactId = 'capturecomposable'
+                version = '1.0.0'
+            }
+        }
+    }
+}
